API
- defined user service endpoints,
- defined user service models,
- created stub user service file,
- updated API docs
